# Display

./: README.md  a  gui_1.py  gui_2.py  license  main.py  pyproject.toml  setting.json  settings.json  tempCodeRunnerFile.py
assets/: 2023_新歓写真展.xlsx  penname_to_name.json  penname_to_sns.json  ~$リコシャ　2022早稲田祭展　写真収集フォーム.xlsx  リコシャ　2022早稲田祭展　写真収集フォーム.xlsx
assets/excel/: 2023_新歓写真展.xlsx  リコシャ　2023早稲田祭展　写真収集フォーム .xlsx
assets/json/: penname_to_name.json  penname_to_sns.json
src/components/A4Paper/: main.py  tempCodeRunnerFile.py
src/components/Description/: functions.py  main.py  tempCodeRunnerFile.py
src/components/Integeration/: functions.py  main.py  qrcode_generate.py  tempCodeRunnerFile.py
src/components/Manupulate_PDF/: main.py
src/components/QRcode/: functions.py  main.py  qrcode_generate.py  tempCodeRunnerFile.py
src/components/Questionnaire/: functions.py  main.py  tempCodeRunnerFile.py
src/components/Sample/: functions.py  main.py
src/components/Tag/: functions.py  main.py  tempCodeRunnerFile.py
src/components/WorkList/: functions.py  main.py
src/dev/: demo1.py  demo2.py  demo3.py  pdf_to_word.py  tempCodeRunnerFile.py
