[tool.poetry]
name = "display"
version = "0.1.0"
description = ""
authors = ["mksmkss <masataka2003@gmail.com>"]
packages = [
    {include= "src"},
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
